--- a/basakitaa.csproj
+++ b/basakitaa.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	<SupportedPlatform>Windows</SupportedPlatform>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +15,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
+    <ProjectReference Include="D:\xampp\htdocs\progwebb\ComponentLibrary\ComponentLibrary.csproj" />
+	  <SupportedPlatform Include="browser" />
+	
   </ItemGroup>
 
 </Project>
